tests as far as the eye can see

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "author": "amilliiee",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "jsdom": "^23.0.1"
   }
 }
